fixed horizontal scroll

--- a/divjoy-template/src/original/css/partners.module.css
+++ b/divjoy-template/src/original/css/partners.module.css
@@ -9,6 +9,7 @@
     flex-wrap: wrap; /* Wrap items when the container width is exceeded */
     justify-content: space-between; /* Distribute items evenly along the main axis */
     align-items: flex-start;
+    
   }
   .coffee-chats-applicant6 {
     width: 100%;
@@ -18,6 +19,7 @@
     position: relative;
     align-items: flex-start;
     flex-shrink: 0;
+    overflow: auto;
     background-color: rgba(243, 247, 255, 1);
     /*background-color: #191970; /*CHANGED THIS*/
     background-color: rgba(44, 128, 255, 1);
